Refactor boots chart
Much of boots configuration is exposed through raw env and flag values.
This can make it awkward to overwrite specific values in super charts.
This refactor exposes configuration in a values native way making it
easier to overwrite specific keys as desired.

Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 917021b8ddf6dff5026101b2b0cfa179c2c7fa84

--- a/charts/tinkerbell/boots/templates/service.yaml
+++ b/charts/tinkerbell/boots/templates/service.yaml
@@ -9,12 +9,7 @@ metadata:
 spec:
   clusterIP: None
   ports:
-  {{- range .Values.ports }}
-  - name: {{ .name }}
-    port: {{ .port }}
-    targetPort: {{ .targetPort }}
-    protocol: {{ .protocol }}
-  {{- end }}
+  {{- include "boots.ports" ( merge ( dict "PortKey" "port" ) .Values  ) | indent 2 }}
   selector:
     app: {{ .Values.name }}
 {{- end -}}
