Use a list for Hegel trusted proxy configuration
We found a pattern that works well and is proven out in Boots. This
aligns trusted proxy configuration with the approach in Hegel.

Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 898fef0a7869217d96f096e578efadd90ed4d226

--- a/charts/tinkerbell/hegel/templates/deployment.yaml
+++ b/charts/tinkerbell/hegel/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
           {{- end }}
           env:
             - name: HEGEL_TRUSTED_PROXIES
-              value: {{ required "missing trustedProxies" .Values.trustedProxies | quote }}
+              value: {{ required "missing trustedProxies" ( join "," .Values.trustedProxies | quote ) }}
             {{- range $i, $env := .Values.env }}
             - name: {{ $env.name | quote }}
               value: {{ $env.value | quote }}
