Set stack.loadBalancerIP equal to boots.remoteIp:
In most cases these will need to be the same so that
files like the Hook kernel and initramfs will be served from
the correct IP.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: a9b25f20a86c8d93f3beeb628943069f9c69a024

--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -43,7 +43,8 @@ boots:
   image: quay.io/tinkerbell/boots:v0.8.0
   tinkWorkerImage: quay.io/tinkerbell/tink-worker:v0.8.0
   trustedProxies: []
-  remoteIp: 192.168.1.94
+  # In most cases this value will be the same as `stack.loadBalancerIP`.
+  remoteIp: 192.168.2.111
 
 hegel:
   image: quay.io/tinkerbell/hegel:v0.10.1
