Add relay functionality:
This enables Boots to be deployed, scaled, etc
in normal kubernetes ways instead of the current
paradigm with using host networking. Also, host networking
is only needed for DHCP broadcast requests and Boots
serves many other things. tftp, http, syslog.

Other updates include:

- use cluster ips in all charts
- default to hostNetwork: false in Boots chart
- use RollingUpdate deployment strategy in Boots chart
- use trailing dot in all FQDN references (fixes issues found in KinD
  deployments)
- Move to ubuntu image for downloading Hook (fixes issues found in KinD
  deployments)

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: b17d1ccebb98cf7f0fbde4aa17dd864c5c2d0313

--- a/charts/tinkerbell/boots/values.yaml
+++ b/charts/tinkerbell/boots/values.yaml
@@ -25,14 +25,14 @@ roleBindingName: boots-rolebinding
 
 deployment:
   strategy:
-    type: Recreate
+    type: RollingUpdate
 
 # The log level for the container.
 logLevel: "info"
 
 # The network mode to launch the boots container. When true, the boots container will use the
 # host network.
-hostNetwork: true
+hostNetwork: false
 
 # DHCP server configuration. Name is an identifier used across Kubernetes manifests for port
 # identification, ip is the IP address to bind to, and port is the port to bind to.
