--- a/charts/tinkerbell/stack/templates/nginx-configmap.yaml
+++ b/charts/tinkerbell/stack/templates/nginx-configmap.yaml
@@ -21,7 +21,7 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver $POD_NAMESERVER;
-          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
 
           proxy_pass http://$boots_dns:{{ .Values.boots.http.port }};
         }
@@ -33,7 +33,7 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver $POD_NAMESERVER;
-          set $hegel_dns {{ .Values.hegel.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $hegel_dns {{ .Values.hegel.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
 
           proxy_pass http://$hegel_dns:{{ .Values.hegel.deployment.port }};
         }
@@ -45,7 +45,7 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           resolver $POD_NAMESERVER;
-          set $tink_dns {{ .Values.tink.server.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $tink_dns {{ .Values.tink.server.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
 
           grpc_pass grpc://$tink_dns:{{ .Values.tink.server.deployment.port }};
         }
@@ -65,7 +65,7 @@ data:
       server {
           listen {{ .Values.boots.dhcp.port }} udp;
           resolver $POD_NAMESERVER; # needed in Kubernetes for dynamic DNS resolution
-          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
           proxy_pass $boots_dns:{{ .Values.boots.dhcp.port }};
           proxy_bind $remote_addr:$remote_port transparent;
           proxy_responses 0;
@@ -74,7 +74,7 @@ data:
       server {
           listen {{ .Values.boots.tftp.port }} udp;
           resolver $POD_NAMESERVER;
-          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
           proxy_pass $boots_dns:{{ .Values.boots.tftp.port }};
           proxy_timeout 1s;
           access_log /dev/stdout logger-json;
@@ -82,7 +82,7 @@ data:
       server {
           listen {{ .Values.boots.syslog.port }} udp;
           resolver $POD_NAMESERVER;
-          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local; # needed in Kubernetes for dynamic DNS resolution
+          set $boots_dns {{ .Values.boots.name }}.{{ .Release.Namespace }}.svc.cluster.local.; # needed in Kubernetes for dynamic DNS resolution
           proxy_pass $boots_dns:{{ .Values.boots.syslog.port }};
           proxy_bind $remote_addr:$remote_port transparent;
           proxy_responses 0;
