--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -13,7 +13,7 @@ stack:
     enabled: true
     name: hook-files
     port: 8080
-    image: alpine
+    image: ubuntu
     downloads:
       - url: https://github.com/tinkerbell/hook/releases/download/v0.7.0/hook_x86_64.tar.gz
         sha512sum:
@@ -33,6 +33,13 @@ stack:
     # Customize the interface KubeVIP advertises on. When unset, KubeVIP will autodetect the
     # interface.
     #interface: eth0
+  relay:
+    enabled: true
+    image: ghcr.io/jacobweinstock/dhcrelay
+    maxHopCount: 10
+    # sourceInterface is the host/node interface to listen on for DHCP broadcast packets.
+    sourceInterface: eno1
+    sourceIP: 192.168.2.63/24
 
 # -- Overrides
 # The values defined here override those in the individual charts. Some of them require tweaking
@@ -46,8 +53,6 @@ boots:
   trustedProxies: []
   # In most cases this value will be the same as `stack.loadBalancerIP`.
   remoteIp: 192.168.2.111
-  # hostNetwork: true is already the default in the Boots chart, but is included here for clarity.
-  hostNetwork: true
 
 hegel:
   image: quay.io/tinkerbell/hegel:v0.10.1
