Fix linting issue
Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 7c7289b1a32ed73aaea732409a49d64daf72eba9

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -94,8 +94,8 @@ spec:
           items:
             - key: nginx.conf
               path: nginx.conf.template
+{{- if .Values.stack.service.enabled -}}
 ---
-{{- if .Values.stack.service.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
