Deploy Boots with svc type: LoadBalancer:
While this requires an additional IP for the
load balancer its the most reliable way to get unicast
traffic in. Once we migrate to the kubernetes
gateway API we can go back to a single IP for
all services.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 5060d88c2a3d0f1bffdcaf48cb072f53e8fa007d

--- a/charts/tinkerbell/boots/values.yaml
+++ b/charts/tinkerbell/boots/values.yaml
@@ -27,6 +27,12 @@ deployment:
   strategy:
     type: RollingUpdate
 
+service:
+  enabled: true
+  type: LoadBalancer
+  class: kube-vip.io/kube-vip-class
+  loadBalancerIP: ""
+
 # The log level for the container.
 logLevel: "info"
 
