--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.stack.enabled -}}
+{{- if .Values.stack.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,7 +20,7 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
-      {{- if eq .Values.stack.service.enabled false }}
+      {{- if not .Values.stack.service.enabled }}
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
       {{- end }}
@@ -33,9 +33,6 @@ spec:
           envsubst '$POD_NAMESERVER' < /tmp/nginx.conf.template > /etc/nginx/nginx.conf;
           nginx -g 'daemon off;'
         ports:
-        {{- if not .Values.boots.hostNetwork }}
-        {{- include "boots.ports" ( merge ( dict "PortKey" "containerPort" ) .Values.boots  ) | indent 8 }}
-        {{- end }}
         - containerPort: {{ .Values.hegel.deployment.port }}
           protocol: TCP
           name: {{ .Values.hegel.deployment.portName }}
@@ -94,7 +91,7 @@ spec:
           items:
             - key: nginx.conf
               path: nginx.conf.template
-{{- if .Values.stack.service.enabled -}}
+{{- if .Values.stack.service.enabled }}
 ---
 apiVersion: v1
 kind: Service
@@ -120,11 +117,10 @@ spec:
   - name: {{ .Values.stack.hook.name }}
     port: {{ .Values.stack.hook.port }}
     protocol: TCP
-  {{- include "boots.ports" ( merge ( dict "PortKey" "port" ) .Values.boots  ) | indent 2 }}
   selector:
     app: stack
     {{- with .Values.stack.selector }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
-{{- end -}}
-{{- end -}}
+{{- end }}
+{{- end }}
